Finalize logic for pregenerated checksums and optional SIP output plus code refactoring